file log controller tests
